better ux for the search and the forms (fix z-index)

--- a/assets/less/page/product_list.less
+++ b/assets/less/page/product_list.less
@@ -13,7 +13,7 @@
 
     .product-search-result{
         position: fixed;
-        z-index: @zindex-navbar-fixed;
+        z-index: @zindex-navbar-fixed/2;
         overflow-y: auto;
         height: (@height-search-item+1px)*3; // +1px to see border & *3 for 3 items
         top:@header-height*2;
